--- a/src/ZMotionSDK/ZMotionSDK.csproj
+++ b/src/ZMotionSDK/ZMotionSDK.csproj
@@ -35,4 +35,8 @@
       <None Include="..\..\doc\nuget\ZMotion.png" Pack="True" PackagePath="\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MessageToolkit" Version="2.0.0" />
+    </ItemGroup>
+
 </Project>
