重构协议层：引入ZMotionIOClient并优化映射
- 新增 ZMotionIOClient<TDI, TDO>，替代 MessageBuilder，支持类型安全和数据缓存
- 协议映射与批量写入升级为 ProtocolDataMapping，依赖 MessageToolkit
- 移除旧接口与反射相关冗余代码，简化维护
- ViewModel 及业务层同步适配新接口
- 项目版本号升级为 2.1.0，新增详细使用指南

--- a/src/ZMotionSDK/ZMotionSDK.csproj
+++ b/src/ZMotionSDK/ZMotionSDK.csproj
@@ -7,7 +7,7 @@
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <PackageId>ZMotionSDK</PackageId>
         <Title>ZMotionSDK</Title>
-        <Version>2.0.2</Version>
+        <Version>2.1.0</Version>
         <Authors>Lejoy</Authors>
         <Description>此包为正运动二次开发包,增加了一些协议的帮助类</Description>
         <PackageIcon>ZMotion.png</PackageIcon>
@@ -33,6 +33,10 @@
       </None>
       <None Include="..\..\README.md" Pack="True" PackagePath="\" />
       <None Include="..\..\doc\nuget\ZMotion.png" Pack="True" PackagePath="\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MessageToolkit" Version="3.0.1" />
     </ItemGroup>
 
 </Project>
